--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
     "typescript": "^5.9.3"
   }
