--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.23.0",
     "express": "^5.1.0",
+    "handlebars": "^4.7.8",
     "zod": "^4.1.13"
   },
   "devDependencies": {
