--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.23.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "handlebars": "^4.7.8",
     "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
+    "@types/express-session": "^1.18.2",
     "@types/node": "^24.10.1",
     "typescript": "^5.9.3"
   }
