--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "handlebars": "^4.7.8",
+    "jsonwebtoken": "^9.0.3",
     "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
     "@types/express-session": "^1.18.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "typescript": "^5.9.3",
     "vitest": "^4.0.14"
