--- a/app.yaml
+++ b/app.yaml
@@ -1,3 +1,10 @@
 runtime: nodejs22
 automatic_scaling:
   max_instances: 1
+handlers:
+  - url: /static
+    static_dir: public
+  - url: /.*
+    secure: always
+    redirect_http_response_code: 301
+    script: auto
