--- a/server/app.yaml.template
+++ b/server/app.yaml.template
@@ -3,6 +3,7 @@ automatic_scaling:
   max_instances: 1
 env_variables:
   WIDGET_DIR: widget
+  BASE_URL: "{{SERVER_BASE_URL}}"
 handlers:
   - url: /favicon\.png
     static_files: public/favicon.png
